fix: nowrap artist name on mobile, fix text template escaping

--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -290,6 +290,10 @@ a:focus {
 }
 
 /* Dim text */
+.nowrap {
+  white-space: nowrap;
+}
+
 .dim {
   color: var(--dim);
 }
